finished paragraphs and last image, need to fix header position as it slips behind images when scrolling

--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@
     margin-bottom: 15px;
 }
 
+.video {
+    display: flex;
+    justify-content: center;
+    margin: 43px auto 0px;
+}
+
+body {
+    min-height: 400px;
+    margin-bottom: 100px;
+    clear: both;
+ }
+
 /*This is css for header*/
 .header {
     position: fixed;
@@ -73,6 +85,7 @@
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: 45px;
+    height: 8000px;
 }
 
 .article {
@@ -93,6 +106,31 @@
     font-size: 12px;
     font-family: helvetica,arial,sans-serif;
     color: #666;
+}
+
+.img2text {
+    max-width: 91%;
+    font-size: 0.9375rem;
+    line-height: 1.25rem;
+    font-family: helvetica,arial,sans-serif;
+    color: #666;
+    margin-bottom: 35px;
+}
+
+.embedded-title {
+    margin: 35px 0 5px 0;
+}
+
+.embedded-title-summary {
+    font-size: 14px;
+    font-size: .875rem;
+    line-height: 18px;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-style: normal;
+    font-family: georgia,times,serif;
+    color: #333;
+    margin: 0 0 0 0;
 }
 
 .embedded-post{
@@ -171,6 +209,27 @@
     color: #000000;
 }
 
+.embedded-footer {
+    margin: 10px 0px 40px 110px;
+}
+
+.video-title {
+    font-size: 16px;
+    line-height: 1.25rem;
+    font-style: normal;
+    font-family: arial,helvetica,sans-serif;
+    color: #333;
+}
+
+.video-copyright {
+    font-size: 12px;
+    line-height: 1.25rem;
+    font-style: normal;
+    font-family: arial,helvetica,sans-serif;
+    color: rgb(136, 136, 136);
+    margin-left: 8px;
+}
+
 .img2 {
     height: auto;
     max-height: 500px;
@@ -242,6 +301,13 @@
     border-bottom: 1px solid rgb(204, 204, 204);
     width: 72px;
     margin: 15px auto 18px;
+}
+
+.linecss3 {
+    border-bottom: 1px solid black;
+    width: 72px;
+    margin: 25px auto 18px 0px;
+    padding-top: 20px;
 }
 
 .ulflex {
